# ez-excel-mgt

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  README.rst  cargo.toml  example.py  example_copy.py  example_transform.py  pyproject.toml  readme.md  template.xlsx
.github/workflows/: build.yml  build_and_publish.yml  build_publish.yml  main.yml  readme.yml
docs/: readme.md
scripts/: md_include.py
src/: fill.rs  lib.rs  set.rs  template.rs
src/copy/: coerce.rs  copy.rs  mod.rs
src/fill/: mod.rs  py2rs.rs  py2rs_2.rs
src/structs/: excel.rs  mod.rs  options.rs
src/transform/: action.rs  aggregate.rs  mod.rs  mode.rs  paste.rs
src/utils/: aggregate.rs  excel.rs  mod.rs  py2rs.rs
tests/: conftest.py
tests/functional/: test_class.py  test_copy.py  test_demand.py  test_fill.py  test_transform.py
