[tool.poetry]
name = "ez-excel-mgt"
version = "0.3.0"
description = "Rust-powered Python module for Excel manipulation"
authors = ["Christophe Druet <christophe@stoachup.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Development Status :: 5 - Production/Stable",
]
keywords = ["credentials", "keyring"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pandas = "^2.2.2"
polars = "1.7.1"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
maturin = "^1.7.1"
pytest = "^8.3.3"
openpyxl = "^3.1.5"
pytest-sugar = "^1.0.0"
pytest-icdiff = "^0.9"
pytest-clarity = "^1.0.1"
pytest-cov = "^5.0.0"
cibuildwheel = "^2.21.1"
twine = "^5.1.1"

[build-system]
requires = ["maturin>=1.7.1", "setuptools", "cibuildwheel>=2.0"]
build-backend = "maturin"
